--- a/home/index.html
+++ b/home/index.html
@@ -10,16 +10,16 @@
 
         <!-- get out of here, you're not clever. -->
 
-        <link rel="stylesheet" href="bootstrap-uetoken.css" />
-        <link rel="stylesheet" href="uetoken.css" />
-        <link rel="stylesheet" href="tether.css" />
+        <link rel="stylesheet" href="home/bootstrap-uetoken.css" />
+        <link rel="stylesheet" href="home/uetoken.css" />
+        <link rel="stylesheet" href="home/tether.css" />
 
         <!-- and yes, I used Bootstrap. sue me -->
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway|Yanone+Kaffeesatz:300,400" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="home/images/favicon.ico" />
         <meta name="application-name" content="Mafisi Coin">
         <meta name="msapplication-TileColor" content="#218989" />
 
@@ -35,7 +35,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo.png" style="height: 2em; margin: -1em 0;" alt="">
+                    <img src="home/images/logo.png" style="height: 2em; margin: -1em 0;" alt="">
                     Mafisi Coin
                 </a>
                 <div class="collapse navbar-collapse" id="navbar-contents">
@@ -300,7 +300,7 @@
             </div>
         </footer>
 
-        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="home/jquery.js"></script>
 
     </body>
 
