--- a/home/index.html
+++ b/home/index.html
@@ -272,17 +272,16 @@
                         <hr class="hidden-md-up" />
                         <p class="h4">Why are you doing this?</p>
                         <p>
-                            Because, great acts of fisi demand recognition. What's a better way to reward fisis that giving them a coin
+                            Because, great acts of fisi demand recognition. What's a better way to reward fisis than giving them a coin
                         </p>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <hr class="hidden-lg-up" />
                         <p class="h4">What can I do with FISI coin?</p>
                         <p>
-                            Council of Fisis <d>Superior</d> reccomends you get laid. Perhaps
-                        </p>
-                        <p>
-                            Other than that&hellip; nothing. Absolutely nothing. FISI coin is a vanity project
+                            Council of Fisis <d>Superior</d> recommends you use it to get laid, perhaps,
+                        
+                            Other than that&hellip; nothing. Absolutely nothing. so go ahead an be the best fisi that you can be..
                         </p>
                     </div>
                 </div>
