--- a/home/index.html
+++ b/home/index.html
@@ -300,7 +300,15 @@
         </footer>
 
         <script type="text/javascript" src="home/jquery.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110953969-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-110953969-1');
+</script>
     </body>
 
 </html>
